--- a/complete/src/main/resources/application.properties
+++ b/complete/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-spring.datasource.username=springuser
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/data_dictionary
+spring.datasource.username=proterra_user
 spring.datasource.password=ThePassword
